# baseapi-hexagonal-architecture

./: .gitignore  Makefile  README.md  alembic.ini  celerybeat-schedule.db  pyproject.toml
config/: toml_config_manager.py
config/local/: .secrets.toml  Dockerfile  config.toml  docker-compose.yaml  export.toml
docs/draw.io/: application_controller_interactor.drawio  application_interactor.drawio  application_interactor_adapter.drawio  dep_graph_basic.drawio  dep_graph_inv_correct.drawio  dep_graph_inv_correct_di.drawio  dep_graph_inv_corrupted.drawio  domain_adapter.drawio  identity_provider.drawio  infrastructure_controller_handler.drawio  infrastructure_handler.drawio  toml_config_manager.drawio
dump/: countries.csv
korbit_review/app/application/atlas/: query_models.py
korbit_review/app/application/commands/user/: deactivate_user.py  revoke_admin.py
korbit_review/app/application/common/ports/: access_revoker.py  city_query_gateway.py  country_query_gateway.py  email_verification_repository.py  identity_provider.py  password_reset_repository.py  session_store.py  user_query_gateway.py
korbit_review/app/application/common/query_params/: pagination.py  user.py
korbit_review/app/application/maintenance/: ports.py
korbit_review/app/application/notification/: ports.py
korbit_review/app/application/queries/: list_users.py
korbit_review/app/domain/entities/: base.py  city.py  notification.py  password_reset.py  payment.py  session.py  subscription.py  user.py
korbit_review/app/domain/enums/: user_role.py
korbit_review/app/domain/exceptions/: location.py  user.py
korbit_review/app/domain/ports/: password_hasher.py
korbit_review/app/domain/services/: user.py
korbit_review/app/domain/value_objects/: access_token.py  address.py  amount.py  city_name.py  client_secret.py  coordinates.py  country_code.py  country_id.py  country_name.py  data_json.py  duration.py  email.py  email_verification_id.py  expiration_time.py  features.py  first_name.py  ip_address.py  iso_code.py  last_activity.py  last_login.py  notification_action.py  notification_data.py  notification_id.py  notification_title.py  payment_method.py  payment_status.py  payment_type.py  phone_number.py  postal_code.py  price.py  profile_picture.py  read_status.py  refresh_token.py  reset_status.py  session_status.py  stripe_payment_intent_id.py  stripe_price_id.py  stripe_product_id.py  subscription.py  subscription_data.py  (+6 more)
korbit_review/app/domain/value_objects/raw_password/: validation.py
korbit_review/app/infrastructure/adapters/: city_reader_sqla.py  email_verification_repository_sqla.py  main_transaction_manager_sqla.py  password_hasher_bcrypt.py  payment_repository_sqla.py  session_store_sqla.py  subscription_user_repository_sqla.py  user_reader_sqla.py
korbit_review/app/infrastructure/atlas/: readers_sqla.py
korbit_review/app/infrastructure/atlas/handlers/: init_cities.py  init_countries.py
korbit_review/app/infrastructure/auth/: exceptions.py
korbit_review/app/infrastructure/auth/adapters/: transaction_manager_sqla.py
korbit_review/app/infrastructure/auth/handlers/: account_me.py  change_password.py  constants.py  log_out.py  password_reset.py  send_email_verification.py  sign_up.py
korbit_review/app/infrastructure/auth/refresh_token/: generator.py
korbit_review/app/infrastructure/celery/: app.py  compat_tasks.py  tasks.py
korbit_review/app/infrastructure/maintenance/: repositories_sqla.py
korbit_review/app/scripts/: create_db.py
korbit_review/app/setup/: app_factory.py
korbit_review/app/setup/config/: database.py  security.py
korbit_review/app/setup/ioc/: domain.py  settings.py
scripts/: init_db.py  test_config.py
scripts/dishka/: plot_dependencies_data.py
scripts/makefile/: docker_prune.sh
src/app/: run.py
src/app/application/atlas/: ports.py  queries.py
src/app/application/commands/: activate_user.py  change_password.py  create_user.py  deactivate_user.py  grant_admin.py  revoke_admin.py
src/app/application/maintenance/: tasks.py
src/app/application/subscription/: ports.py
src/app/domain/entities/: base.py  country.py  email_verification.py  subscription_user.py  user.py
src/app/domain/exceptions/: user.py
src/app/domain/ports/: user_id_generator.py
src/app/domain/services/: user.py
src/app/domain/value_objects/: address.py  base.py  city_id.py  country_id.py  created_at.py  currency.py  currency_info.py  email.py  end_date.py  first_name.py  language.py  last_login.py  last_name.py  location_info.py  password_reset_id.py  payment_data.py  payment_date.py  payment_id.py  phone_number.py  postal_code.py  profile_picture.py  reset_token.py  retry_count.py  session_id.py  start_date.py  state_code.py  state_id.py  state_name.py  stripe_customer_id.py  stripe_subscription_id.py  subscription_id.py  subscription_status.py  subscription_user_id.py  updated_at.py  user_agent.py  user_id.py  user_password_hash.py  user_status.py  verification_status.py
src/app/infrastructure/adapters/: city_reader_sqla.py  country_reader_sqla.py  main_flusher_sqla.py  notification_repository_sqla.py  password_reset_repository_sqla.py  payment_repository_sqla.py  session_recorder_sqla.py  subscription_repository_sqla.py  subscription_user_repository_sqla.py  user_data_mapper_sqla.py  user_id_generator_uuid.py  user_reader_sqla.py
src/app/infrastructure/celery/: app.py  compat_tasks.py  tasks.py
src/app/infrastructure/persistence_sqla/: provider.py  registry.py
src/app/setup/: app_factory.py
src/app/setup/config/: loader.py  logs.py  mailgun.py  settings.py  stripe.py
src/app/setup/ioc/: application.py  infrastructure.py  presentation.py  provider_registry.py
tests/app/integration/setup/: test_cfg_loader.py
tests/app/performance/: profile_password_hasher_bcrypt.py
tests/app/unit/factories/: named_entity.py  settings_data.py  tagged_entity.py  user_entity.py  value_objects.py
tests/app/unit/infrastructure/: test_password_hasher_bcrypt.py
tests/app/unit/setup/: test_cfg_database.py  test_cfg_loader.py  test_cfg_logs.py  test_cfg_security.py
(+129 files in other folders)
